# execution

./: BUILD  CMakeLists.txt  WORKSPACE  bulk.h  bulk_tests.cpp  dummy.cpp  execution.h  execution_benchmark.cpp  inline_task.h  intrusive_forward_list.h  intrusive_forward_list_tests.cpp  invoke_traits.h  invoke_traits_tests.cpp  sync_wait.h  tag_invoke.h  tag_invoke_tests.cpp  then.h  then_tests.cpp  thread_pool.h
